2007-02-06 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: Makefile.am, badguy3.xml:
	  Added simplified version of nasty buffer bug test.

2007-02-08 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>

	* configure.in: Allow configure to continue with use_python
	  set to false if a python binary is not found, as per
	  http://sources.redhat.com/automake/automake.html#Python.

2007-02-06 Sandro Santilli <strk@refractions.net>

	* source/index/strtree/STRtree.cpp,
	  source/index/strtree/AbstractNode.cpp,
	  source/index/strtree/ItemBoundable.cpp,
	  source/index/strtree/AbstractSTRtree.cpp,
	  source/index/strtree/SIRtree.cpp,
	  source/headers/geos/index/strtree/AbstractNode.h,
	  source/headers/geos/index/strtree/ItemBoundable.h,
	  source/headers/geos/index/strtree/Boundable.h,
	  source/headers/geos/index/strtree/AbstractSTRtree.h,
	  source/headers/geos/index/strtree/SIRtree.h,
	  source/headers/geos/index/strtree/STRtree.h
	  General refactoring aimed at making the code cleaner
	  to read and maintain; use iterators rather then random
	  accessing containers to allow easy future switch to std::list
	  from std::vector; use a tolerance-based strict weak ordering
	  operator for sorting child boundables in STRtree, this
	  fixes the heisenbug when building with inlines disabled.

2007-02-06 Sandro Santilli <strk@refractions.net>

	* tests/unit/simplify/DouglasPeuckerSimplifierTest.cpp:
	  Expect result of POLYGON simplification to always be
	  a polygon, even if collapsed to the empty geom.
        * operation::buffer::BufferBuilder,
	  operation::buffer::BufferOp:
	  Fixed buffer operation to always return polygonal
	  geometry

---------  GEOS-3.0.0rc4 release [2007-02-02] --------------------------

2007-02-01 Sandro Santilli <strk@refractions.net>

	* operation::buffer::BufferOp: set MAX_PRECISION_DIGITS
	  so to match JTS.

2007-01-26 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: Makefile.am, stmlf-cases-20070119.xml: